--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
     let nameToLayers = {};
     let guessedSegmentIds = new Set();
+let incorrectSegmentIds = new Set();
     let hintUsedIds = new Set();
     let currentUserId = null;
 
@@ -102,31 +103,11 @@
       guessedSegmentIds.clear();
       hintUsedIds.clear();
       data.forEach(row => {
-        const id = row.road_id;
-        const color = row.correct
-          ? (row.used_hint ? 'orange' : 'gray')
-          : (row.used_hint ? 'orange' : 'red');
-        guessedSegmentIds.add(id);
-        if (nameToLayers[row.road_name]) {
-          nameToLayers[row.road_name].forEach(layer => {
-            layer.setStyle({ color, weight: 6 });
-            layer.off('click');
-          });
-        }
-    });
-        const id = row.road_id;
-        const color = row.correct
-          ? (row.used_hint ? 'orange' : 'gray')
-          : (row.used_hint ? 'orange' : 'red');
-        guessedSegmentIds.add(id);
-        if (nameToLayers[row.road_name]) {
-          nameToLayers[row.road_name].forEach(layer => {
-            layer.setStyle({ color, weight: 6 });
-            layer.off('click');
-          });
-        }
-    });
+        if (row.correct) {
         guessedSegmentIds.add(row.road_id);
+    } else {
+        incorrectSegmentIds.add(row.road_id);
+    }
         if (row.used_hint) hintUsedIds.add(row.road_id);
       });
     }
@@ -172,6 +153,14 @@
               nameToLayers[name].push(layer);
 
               if (guessedSegmentIds.has(id)) {
+                layer.setStyle({ color: 'gray', weight: 6 });
+                layer.off('click');
+                return;
+              } else if (incorrectSegmentIds.has(id)) {
+                layer.setStyle({ color: 'red', weight: 6 });
+                layer.off('click');
+                return;
+              }
                 const color = hintUsedIds.has(id) ? 'orange' : 'gray';
                 layer.setStyle({ color, weight: 6 });
                 layer.off('click');
@@ -196,23 +185,27 @@
                 } else {
                   attempts += 1;
                   const color = attempts >= 3 ? 'orange' : 'red';
+                  if (color === 'red') {
+                    const ids = roadNameToIds[name] || [];
+                    for (const id of ids) {
+                      if (!incorrectSegmentIds.has(String(id))) {
+                        const { error } = await supabase.from('road_guesses').insert([{
+                          user_id: currentUserId,
+                          road_id: String(id),
+                          road_name: name,
+                          correct: false,
+                          used_hint: false
+                        }]);
+                        if (!error) {
+                          incorrectSegmentIds.add(String(id));
+                          console.log('Incorrect guess saved for', id);
+                        } else {
+                          console.error('Error saving incorrect guess:', error);
+                        }
+                      }
+                    }
+                  }
                   applyColorToAllSegments(name, color);
-                  await supabase.from('road_guesses').insert([{
-                      user_id: currentUserId,
-                      road_id: String(id),
-                      road_name: name,
-                      correct: false,
-                      used_hint: attempts >= 3
-                    }]);
-                  guessedSegmentIds.add(String(id));
-                  await supabase.from('road_guesses').insert([{
-                      user_id: currentUserId,
-                      road_id: String(id),
-                      road_name: name,
-                      correct: false,
-                      used_hint: attempts >= 3
-                    }]);
-                  guessedSegmentIds.add(String(id));
                   alert("Incorrect. Try again.");
                 }
               });
