--- a/index.html
+++ b/index.html
@@ -159,15 +159,23 @@ async function loadMap() {
           if (!nameToLayers[name]) nameToLayers[name] = [];
           nameToLayers[name].push(layer);
 
-          if (segmentStateMap.has(id)) {
-            const state = segmentStateMap.get(id);
-            let color = 'gray';
-            if (!state.correct) color = 'red';
-            else if (state.used_hint) color = 'orange';
-            layer.setStyle({ color, weight: 6 });
-            layer.off('click');
-            return;
-          }
+         if (segmentStateMap.has(id)) {
+  const state = segmentStateMap.get(id);
+  let color = 'gray';
+  if (!state.correct) {
+    color = 'red'; // Incorrect guess: leave clickable
+  } else if (state.used_hint) {
+    color = 'orange';
+  }
+
+  layer.setStyle({ color, weight: 6 });
+
+  if (state.correct) {
+    layer.off('click'); // Only disable clicks for correct guesses
+    return;
+  }
+}
+
 
           layer.setStyle({ color: 'black', weight: 6 });
           let attempts = 0;
