--- a/index.html
+++ b/index.html
@@ -159,22 +159,29 @@ async function loadMap() {
           if (!nameToLayers[name]) nameToLayers[name] = [];
           nameToLayers[name].push(layer);
 
-         if (segmentStateMap.has(id)) {
+        if (segmentStateMap.has(id)) {
   const state = segmentStateMap.get(id);
   let color = 'gray';
+
   if (!state.correct) {
-    color = 'red'; // Incorrect guess: leave clickable
+    color = 'red';
+    // Keep it clickable — don't return early
   } else if (state.used_hint) {
     color = 'orange';
-  }
-
-  layer.setStyle({ color, weight: 6 });
-
-  if (state.correct) {
-    layer.off('click'); // Only disable clicks for correct guesses
+    layer.setStyle({ color, weight: 6 });
+    layer.off('click'); // lock orange roads
+    return;
+  } else {
+    color = 'gray';
+    layer.setStyle({ color, weight: 6 });
+    layer.off('click'); // lock gray roads
     return;
   }
+
+  // Apply red color and allow it to remain clickable
+  layer.setStyle({ color, weight: 6 });
 }
+
 
 
           layer.setStyle({ color: 'black', weight: 6 });
