--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
   <style>
     #map { height: 100vh; }
+
     .legend {
       background: white;
       padding: 6px 10px;
@@ -18,6 +19,7 @@
       right: 10px;
       z-index: 1000;
     }
+
     #login-btn, #logout-btn {
       position: absolute;
       top: 10px;
@@ -31,7 +33,48 @@
       cursor: pointer;
       z-index: 1001;
     }
+
     #logout-btn { right: 130px; }
+
+    /* Modal overlay and popup */
+    .guess-overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(0, 0, 0, 0.5);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+    }
+
+    .guess-box {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      width: 300px;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+    }
+
+    .guess-box input {
+      width: 90%;
+      padding: 8px;
+      margin: 10px 0;
+      font-size: 14px;
+    }
+
+    .guess-box button {
+      margin: 5px;
+      padding: 6px 14px;
+      font-size: 13px;
+      cursor: pointer;
+      border: none;
+      border-radius: 4px;
+    }
+
+    .submit-btn { background-color: #007bff; color: white; }
+    .giveup-btn { background-color: #dc3545; color: white; }
   </style>
 </head>
 <body>
@@ -42,10 +85,23 @@
     Red: Incorrect<br>
     Orange: Hint Used<br>
     Gray: Correct<br>
-    Prismatic: Ultra-Hard Mode
+    Prismatic: Ultra-Hard Mode<br>
+    Yellow: Suffix Mismatch
   </div>
   <button id="login-btn">Login with Google</button>
   <button id="logout-btn">Logout</button>
+
+  <!-- Modal Guess Box -->
+  <div class="guess-overlay" id="guess-overlay">
+    <div class="guess-box">
+      <div id="guess-question">Guess the name of this road:</div>
+      <input type="text" id="guess-input" placeholder="Enter road name">
+      <br>
+      <button class="submit-btn" id="submit-guess">Submit</button>
+      <button class="giveup-btn" id="cancel-guess">Give Up</button>
+    </div>
+  </div>
+
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
@@ -59,14 +115,43 @@ import { roadNameToIds } from './roadNameToIds.js';
 let nameToLayers = {};
 let guessedSegmentIds = new Set();
 let currentUserId = null;
-let segmentStateMap = new Map(); // road_id => { correct, used_hint }
+let segmentStateMap = new Map();
+
+const overlay = document.getElementById('guess-overlay');
+const input = document.getElementById('guess-input');
+const submitBtn = document.getElementById('submit-guess');
+const cancelBtn = document.getElementById('cancel-guess');
+
+let activeGuessName = "";
+let guessAttempts = 0;
+let activeLayer = null;
+
+const suffixMap = {
+  st: 'street', ave: 'avenue', rd: 'road', blvd: 'boulevard', ln: 'lane',
+  ct: 'court', cir: 'circle', hwy: 'highway', pkwy: 'parkway', dr: 'drive',
+  ter: 'terrace', pl: 'place', sq: 'square', way: 'way'
+};
+
+function normalize(name) {
+  const parts = name.toLowerCase().split(/\s+/);
+  return parts.map(part => suffixMap[part] || part).join(' ');
+}
+
+function isSuffixMismatch(guess, actual) {
+  const partsG = guess.trim().toLowerCase().split(/\s+/);
+  const partsA = actual.trim().toLowerCase().split(/\s+/);
+  if (partsG.length !== partsA.length) return false;
+  const baseG = partsG.slice(0, -1).join(' ');
+  const baseA = partsA.slice(0, -1).join(' ');
+  const lastG = suffixMap[partsG.at(-1)] || partsG.at(-1);
+  const lastA = suffixMap[partsA.at(-1)] || partsA.at(-1);
+  return baseG === baseA && lastG !== lastA;
+}
 
 document.getElementById('login-btn').onclick = async () => {
   const { error } = await supabase.auth.signInWithOAuth({
     provider: 'google',
-    options: {
-      redirectTo: window.location.origin
-    }
+    options: { redirectTo: window.location.origin }
   });
   if (error) alert('Login error: ' + error.message);
 };
@@ -121,7 +206,7 @@ async function saveGuessSegmentIds(roadName, isCorrect, usedHint = false) {
   for (const id of ids) {
     const stringId = String(id);
     if (!guessedSegmentIds.has(stringId)) {
-      const { data, error } = await supabase.from('road_guesses').insert([{
+      const { error } = await supabase.from('road_guesses').insert([{
         user_id: currentUserId,
         road_id: stringId,
         road_name: roadName,
@@ -131,9 +216,6 @@ async function saveGuessSegmentIds(roadName, isCorrect, usedHint = false) {
       if (!error) {
         guessedSegmentIds.add(stringId);
         segmentStateMap.set(stringId, { correct: isCorrect, used_hint: usedHint });
-        console.log('Saved guess:', { road_name: roadName, correct: isCorrect, used_hint: usedHint });
-      } else {
-        console.error('Insert error:', error);
       }
     }
   }
@@ -141,10 +223,50 @@ async function saveGuessSegmentIds(roadName, isCorrect, usedHint = false) {
 
 function applyColorToAllSegments(name, color) {
   if (!nameToLayers[name]) return;
-  for (const l of nameToLayers[name]) {
-    l.setStyle({ color });
-  }
+  for (const l of nameToLayers[name]) l.setStyle({ color });
 }
+
+function openGuessBox(name, layer) {
+  activeGuessName = name;
+  activeLayer = layer;
+  guessAttempts = 0;
+  overlay.style.display = "flex";
+  input.value = "";
+  input.focus();
+}
+
+submitBtn.onclick = async () => {
+  const userGuess = input.value.trim();
+  if (!userGuess) return;
+
+  const normalizedGuess = normalize(userGuess);
+  const normalizedActual = normalize(activeGuessName);
+
+  if (normalizedGuess === normalizedActual) {
+    const usedHint = guessAttempts >= 3;
+    applyColorToAllSegments(activeGuessName, usedHint ? 'orange' : 'gray');
+    await saveGuessSegmentIds(activeGuessName, true, usedHint);
+    for (const l of nameToLayers[activeGuessName]) l.off('click');
+    overlay.style.display = "none";
+    return;
+  } else if (isSuffixMismatch(userGuess, activeGuessName)) {
+    applyColorToAllSegments(activeGuessName, 'yellow');
+    alert("Almost! Check the suffix.");
+    return;
+  } else {
+    guessAttempts += 1;
+    const color = guessAttempts >= 3 ? 'orange' : 'red';
+    applyColorToAllSegments(activeGuessName, color);
+    if (guessAttempts === 1) {
+      await saveGuessSegmentIds(activeGuessName, false, false);
+    }
+    alert("Incorrect. Try again.");
+  }
+};
+
+cancelBtn.onclick = () => {
+  overlay.style.display = "none";
+};
 
 async function loadMap() {
   await checkLogin();
@@ -159,56 +281,25 @@ async function loadMap() {
           if (!nameToLayers[name]) nameToLayers[name] = [];
           nameToLayers[name].push(layer);
 
-if (segmentStateMap.has(id)) {
-  const state = segmentStateMap.get(id);
-
-  if (!state.correct) {
-    // Red = incorrect, keep clickable
-    layer.setStyle({ color: 'red', weight: 6 });
-    // no return, keep it interactive
-  } else if (state.used_hint) {
-    // Orange = hint used
-    layer.setStyle({ color: 'orange', weight: 6 });
-    layer.off('click');
-    return;
-  } else {
-    // Gray = correct
-    layer.setStyle({ color: 'gray', weight: 6 });
-    layer.off('click');
-    return;
-  }
-} else {
-  // Unguessed = black
-  layer.setStyle({ color: 'black', weight: 6 });
-}
-
-          let attempts = 0;
-
-          layer.on('click', async function () {
-            let userGuess = prompt("Guess the name of this road:");
-            if (!userGuess) return;
-
-            if (userGuess.toLowerCase() === name.toLowerCase()) {
-              if (attempts >= 3) {
-                applyColorToAllSegments(name, 'orange');
-                await saveGuessSegmentIds(name, true, true);
-              } else {
-                applyColorToAllSegments(name, 'gray');
-                await saveGuessSegmentIds(name, true, false);
-              }
+          const state = segmentStateMap.get(id);
+          if (state) {
+            if (!state.correct) {
+              layer.setStyle({ color: 'red', weight: 6 });
+            } else if (state.used_hint) {
+              layer.setStyle({ color: 'orange', weight: 6 });
               layer.off('click');
-              alert("Correct!");
+              return;
             } else {
-              attempts += 1;
-              const color = attempts >= 3 ? 'orange' : 'red';
-              applyColorToAllSegments(name, color);
-
-              if (attempts === 1) {
-                await saveGuessSegmentIds(name, false, false); // Log first wrong attempt
-              }
-
-              alert("Incorrect. Try again.");
+              layer.setStyle({ color: 'gray', weight: 6 });
+              layer.off('click');
+              return;
             }
+          } else {
+            layer.setStyle({ color: 'black', weight: 6 });
+          }
+
+          layer.on('click', () => {
+            openGuessBox(name, layer);
           });
         }
       }).addTo(map);
