--- a/index.html
+++ b/index.html
@@ -118,10 +118,14 @@ async function loadGuessedSegmentIds() {
 
 async function saveGuessSegmentIds(roadName, isCorrect, usedHint = false) {
   const ids = roadNameToIds[roadName] || [];
+
   for (const id of ids) {
     const stringId = String(id);
-    if (!guessedSegmentIds.has(stringId)) {
-      const { data, error } = await supabase.from('road_guesses').insert([{
+    const existing = segmentStateMap.get(stringId);
+
+    if (!existing) {
+      // No guess yet — insert
+      const { error } = await supabase.from('road_guesses').insert([{
         user_id: currentUserId,
         road_id: stringId,
         road_name: roadName,
@@ -131,9 +135,24 @@ async function saveGuessSegmentIds(roadName, isCorrect, usedHint = false) {
       if (!error) {
         guessedSegmentIds.add(stringId);
         segmentStateMap.set(stringId, { correct: isCorrect, used_hint: usedHint });
-        console.log('Saved guess:', { road_name: roadName, correct: isCorrect, used_hint: usedHint });
+        console.log('Inserted new guess:', { road_name: roadName, correct: isCorrect, used_hint: usedHint });
       } else {
         console.error('Insert error:', error);
+      }
+
+    } else if (isCorrect && !existing.correct) {
+      // Previously incorrect, now correct — update
+      const { error } = await supabase
+        .from('road_guesses')
+        .update({ correct: true, used_hint: usedHint })
+        .eq('user_id', currentUserId)
+        .eq('road_id', stringId);
+
+      if (!error) {
+        segmentStateMap.set(stringId, { correct: true, used_hint: usedHint });
+        console.log('Updated guess to correct:', { road_name: roadName });
+      } else {
+        console.error('Update error:', error);
       }
     }
   }
